NtierVnet-temp.json
{
    "$schema": "https://raw.githubusercontent.com/mspnp/template-building-blocks/master/schemas/buildingBlocks.json",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "buildingBlocks": {
            "value": [
                {
                    "type": "VirtualNetwork",
                    "settings": [
                        {
                            "name": "ra-ntier-vnet",
                            "addressPrefixes": [
                                "10.0.0.0/16"
                            ],
                            "subnets": [
                                {
                                    "name": "web",
                                    "addressPrefix": "10.0.1.0/24",
                                    "serviceEndpoints": [
                                        {
                                            "service": "Microsoft.KeyVault"
                                        }
                                    ]
                                },
                                {
                                    "name": "biz",
                                    "addressPrefix": "10.0.2.0/24",
                                    "serviceEndpoints": [
                                        {
                                            "service": "Microsoft.KeyVault"
                                        }
                                    ]
                                },
                                {
                                    "name": "data",
                                    "addressPrefix": "10.0.3.0/24",
                                    "serviceEndpoints": [
                                        {
                                            "service": "Microsoft.KeyVault"
                                        }
                                    ]
                                },
                                {
                                    "name": "mgmt",
                                    "addressPrefix": "10.0.0.128/25",
                                    "serviceEndpoints": [
                                        {
                                            "service": "Microsoft.KeyVault"
                                        }
                                    ]
                                },
                                {
                                    "name": "appgateway",
                                    "addressPrefix": "10.0.4.0/25",
                                    "serviceEndpoints": [
                                        {
                                            "service": "Microsoft.KeyVault"
                                        }
                                    ]
                                }
                            ]
                        }
                    ]
                },
                {
                    "type": "Template",
                    "settings": {
                        "template": {
                            "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
                            "contentVersion": "1.0.0.0",
                            "parameters": {},
                            "variables": {},
                            "resources": [
                                {
                                    "type": "Microsoft.Network/privateDnsZones",
                                    "apiVersion": "2018-09-01",
                                    "name": "private.contoso.com",
                                    "location": "global",
                                    "dependsOn": [],
                                    "properties": {},
                                    "resources": [
                                        {
                                            "type": "virtualNetworkLinks",
                                            "apiVersion": "2018-09-01",
                                            "name": "mydnslink",
                                            "location": "global",
                                            "dependsOn": [
                                                "[resourceId('Microsoft.Network/privateDnsZones', 'private.contoso.com')]"
                                            ],
                                            "properties": {
                                                "registrationEnabled": false,
                                                "virtualNetwork": {
                                                    "id": "[resourceId('Microsoft.Network/virtualNetworks', 'ra-ntier-vnet')]"
                                                }
                                            }
                                        }
                                    ]
                                },
                                {
                                    "type": "Microsoft.Network/privateDnsZones/A",
                                    "apiVersion": "2018-09-01",
                                    "name": "[concat('private.contoso.com/data', copyIndex(1))]",
                                    "dependsOn": [
                                        "[resourceId('Microsoft.Network/privateDnsZones', 'private.contoso.com')]"
                                    ],
                                    "copy": {
                                        "count": 6,
                                        "name": "dataARecords",
                                        "mode": "Parallel"
                                    },
                                    "properties": {
                                        "ttl": 10,
                                        "aRecords": [
                                            {
                                                "ipv4Address": "[concat('10.0.3.', copyIndex(4))]"
                                            }
                                        ]
                                    }
                                },
                                {
                                    "type": "Microsoft.Network/privateDnsZones/A",
                                    "apiVersion": "2018-09-01",
                                    "name": "private.contoso.com/ops1",
                                    "dependsOn": [
                                        "[resourceId('Microsoft.Network/privateDnsZones', 'private.contoso.com')]"
                                    ],
                                    "properties": {
                                        "ttl": 10,
                                        "aRecords": [
                                            {
                                                "ipv4Address": "10.0.0.132"
                                            }
                                        ]
                                    }
                                }
                            ],
                            "outputs": {}
                        }
                    }
                },
                {
                    "type": "VirtualMachine",
                    "settings": [
                        {
                            "vmCount": 3,
                            "namePrefix": "web",
                            "computerNamePrefix": "web",
                            "adminUsername": "testadminuser",
                            "adminPassword": "Awesome@PW",
                            "virtualNetwork": {
                                "name": "ra-ntier-vnet"
                            },
                            "nics": [
                                {
                                    "isPrimary": true,
                                    "isPublic": false,
                                    "privateIPAllocationMethod": "Static",
                                    "startingIPAddress": "10.0.1.5",
                                    "subnetName": "web"
                                }
                            ],
                            "osType": "linux",
                            "imageReference": {
                                "offer": "UbuntuServer",
                                "publisher": "Canonical",
                                "sku": "18.04-LTS",
                                "version": "latest"
                            },
                            "applicationGatewaySettings": {
                                "name": "webAppGateway",
                                "sku": {
                                    "tier": "WAF_v2"
                                },
                                "gatewayIPConfigurations": [
                                    {
                                        "name": "webIPConfig",
                                        "subnetName": "appgateway"
                                    }
                                ],
                                "frontendIPConfigurations": [
                                    {
                                        "name": "webFrontEndIPConfig1",
                                        "applicationGatewayType": "Public"
                                    }
                                ],
                                "frontendPorts": [
                                    {
                                        "name": "webFrontEndPort1",
                                        "port": 80
                                    }
                                ],
                                "backendAddressPools": [
                                    {
                                        "name": "webBackendAddressPool",
                                        "backendAddresses": [
                                            {
                                                "ipAddress": "10.0.1.5"
                                            },
                                            {
                                                "ipAddress": "10.0.1.6"
                                            },
                                            {
                                                "ipAddress": "10.0.1.7"
                                            }
                                        ]
                                    }
                                ],
                                "backendHttpSettingsCollection": [
                                    {
                                        "name": "webBackendHttpSetting1",
                                        "port": 80,
                                        "protocol": "Http",
                                        "cookieBasedAffinity": "Disabled"
                                    }
                                ],
                                "httpListeners": [
                                    {
                                        "name": "webHttpListener1",
                                        "frontendIPConfigurationName": "webFrontEndIPConfig1",
                                        "frontendPortName": "webFrontEndPort1",
                                        "protocol": "Http"
                                    }
                                ],
                                "requestRoutingRules": [
                                    {
                                        "name": "webRule1",
                                        "ruleType": "Basic",
                                        "httpListenerName": "webHttpListener1",
                                        "backendAddressPoolName": "webBackendAddressPool",
                                        "backendHttpSettingsName": "webBackendHttpSetting1"
                                    }
                                ]
                            }
                        },
                        {
                            "vmCount": 3,
                            "namePrefix": "biz",
                            "size": "Standard_DS1_v2",
                            "computerNamePrefix": "biz",
                            "adminUsername": "testadminuser",
                            "adminPassword": "Awesome@PW",
                            "virtualNetwork": {
                                "name": "ra-ntier-vnet"
                            },
                            "nics": [
                                {
                                    "isPrimary": true,
                                    "isPublic": false,
                                    "subnetName": "biz"
                                }
                            ],
                            "osType": "linux",
                            "imageReference": {
                                "offer": "UbuntuServer",
                                "publisher": "Canonical",
                                "sku": "18.04-LTS",
                                "version": "latest"
                            }
                        },
                        {
                            "vmCount": 6,
                            "namePrefix": "data",
                            "size": "Standard_DS1_v2",
                            "computerNamePrefix": "data",
                            "adminUsername": "testadminuser",
                            "adminPassword": "Awesome@PW",
                            "virtualNetwork": {
                                "name": "ra-ntier-vnet"
                            },
                            "nics": [
                                {
                                    "isPublic": false,
                                    "isPrimary": true,
                                    "subnetName": "data",
                                    "privateIPAllocationMethod": "Static",
                                    "startingIPAddress": "10.0.3.4"
                                }
                            ],
                            "osType": "linux",
                            "imageReference": {
                                "offer": "UbuntuServer",
                                "publisher": "Canonical",
                                "sku": "18.04-LTS",
                                "version": "latest"
                            }
                        },
                        {
                            "vmCount": 1,
                            "namePrefix": "ops",
                            "computerNamePrefix": "ops",
                            "size": "Standard_DS1_v2",
                            "adminUsername": "testadminuser",
                            "adminPassword": "Awesome@PW",
                            "virtualNetwork": {
                                "name": "ra-ntier-vnet"
                            },
                            "nics": [
                                {
                                    "isPublic": false,
                                    "isPrimary": true,
                                    "subnetName": "mgmt",
                                    "privateIPAllocationMethod": "Static",
                                    "startingIPAddress": "10.0.0.132"
                                }
                            ],
                            "osType": "linux",
                            "imageReference": {
                                "offer": "UbuntuServer",
                                "publisher": "Canonical",
                                "sku": "18.04-LTS",
                                "version": "latest"
                            }
                        }
                    ]
                },
                {
                    "type": "VirtualMachineExtension",
                    "settings": [
                        {
                            "vms": [
                                "data-vm1",
                                "data-vm2",
                                "data-vm3",
                                "data-vm4",
                                "data-vm5",
                                "data-vm6"
                            ],
                            "extensions": [
                                {
                                    "name": "install-cassandra",
                                    "publisher": "Microsoft.Azure.Extensions",
                                    "type": "CustomScript",
                                    "typeHandlerVersion": "2.0",
                                    "autoUpgradeMinorVersion": true,
                                    "settings": {
                                        "fileUris": [
                                            "https://github.com/mspnp/reference-architectures/raw/master/virtual-machines/n-tier-linux/install-cassandra.sh"
                                        ],
                                        "commandToExecute": "[concat('bash install-cassandra.sh data1.private.contoso.com ops1.private.contoso.com ra-ntier-dc-', resourceGroup().location)]"
                                    },
                                    "protectedSettings": {}
                                }
                            ]
                        },
                        {
                            "vms": [
                                "web-vm1",
                                "web-vm2",
                                "web-vm3"
                            ],
                            "extensions": [
                                {
                                    "name": "apache-config-ext",
                                    "publisher": "Microsoft.Azure.Extensions",
                                    "type": "CustomScript",
                                    "typeHandlerVersion": "2.0",
                                    "autoUpgradeMinorVersion": true,
                                    "settings": {
                                        "fileUris": [],
                                        "commandToExecute": "bash -c \"DEBIAN_FRONTEND=noninteractive apt-get -yq update && apt-get -yq install apache2 && apachectl restart\""
                                    },
                                    "protectedSettings": {}
                                }
                            ]
                        }
                    ]
                },
                {
                    "type": "VirtualMachineExtension",
                    "settings": [
                        {
                            "vms": [
                                "ops-vm1"
                            ],
                            "extensions": [
                                {
                                    "name": "install-opscenter",
                                    "publisher": "Microsoft.Azure.Extensions",
                                    "type": "CustomScript",
                                    "typeHandlerVersion": "2.0",
                                    "autoUpgradeMinorVersion": true,
                                    "settings": {
                                        "fileUris": [
                                            "https://github.com/mspnp/reference-architectures/raw/master/virtual-machines/n-tier-linux/install-opscenter.sh"
                                        ],
                                        "commandToExecute": "bash install-opscenter.sh data1.private.contoso.com"
                                    },
                                    "protectedSettings": {}
                                }
                            ]
                        }
                    ]
                },
                {
                    "type": "LoadBalancer",
                    "settings": [
                        {
                            "name": "biz-lb",
                            "virtualNetwork": {
                                "name": "ra-ntier-vnet"
                            },
                            "frontendIPConfigurations": [
                                {
                                    "name": "ra-ntier-biz-config1",
                                    "loadBalancerType": "Internal",
                                    "internalLoadBalancerSettings": {
                                        "privateIPAddress": "10.0.2.250",
                                        "subnetName": "biz"
                                    }
                                }
                            ],
                            "loadBalancingRules": [
                                {
                                    "name": "lbr1",
                                    "frontendPort": 80,
                                    "backendPort": 80,
                                    "protocol": "Tcp",
                                    "backendPoolName": "lb-bep1",
                                    "frontendIPConfigurationName": "ra-ntier-biz-config1",
                                    "probeName": "lbp1",
                                    "enableFloatingIP": false
                                }
                            ],
                            "probes": [
                                {
                                    "name": "lbp1",
                                    "port": 80,
                                    "protocol": "Http",
                                    "requestPath": "/"
                                }
                            ],
                            "backendPools": [
                                {
                                    "name": "lb-bep1",
                                    "nics": [
                                        "biz-vm1-nic1",
                                        "biz-vm2-nic1",
                                        "biz-vm3-nic1"
                                    ]
                                }
                            ]
                        }
                    ]
                },{
                    "type": "NetworkSecurityGroup",
                    "settings": [
                        {
                            "name": "ra-ntier-appgateway-nsg",
                            "virtualNetworks": [
                                {
                                    "name": "ra-ntier-vnet",
                                    "subnets": [
                                        "appgateway"
                                    ]
                                }
                            ],
                            "securityRules": [
                                {
                                    "name": "HTTP",
                                    "priority": 100
                                },
                                {
                                    "name": "allow-app-gateway-v2",
                                    "direction": "Inbound",
                                    "priority": 110,
                                    "sourceAddressPrefix": "*",
                                    "destinationAddressPrefix": "*",
                                    "sourcePortRange": "*",
                                    "destinationPortRange": "65200-65535",
                                    "access": "Allow",
                                    "protocol": "*"
                                }
                            ]
                        },
                        {
                            "name": "ra-ntier-web-nsg",
                            "virtualNetworks": [
                                {
                                    "name": "ra-ntier-vnet",
                                    "subnets": [
                                        "web"
                                    ]
                                }
                            ],
                            "securityRules": [
                                {
                                    "name": "HTTP",
                                    "sourceAddressPrefix": "10.0.4.0/25",
                                    "priority": 100
                                },
                                {
                                    "name": "SSH",
                                    "sourceAddressPrefix": "10.0.0.128/25",
                                    "priority": 110
                                }
                            ]
                        },
                        {
                            "name": "ra-ntier-biz-nsg",
                            "virtualNetworks": [
                                {
                                    "name": "ra-ntier-vnet",
                                    "subnets": [
                                        "biz"
                                    ]
                                }
                            ],
                            "securityRules": [
                                {
                                    "name": "HTTP",
                                    "sourceAddressPrefix": "10.0.1.0/24",
                                    "priority": 100
                                }
                            ]
                        },
                        {
                            "name": "ra-ntier-data-nsg",
                            "virtualNetworks": [
                                {
                                    "name": "ra-ntier-vnet",
                                    "subnets": [
                                        "data"
                                    ]
                                }
                            ],
                            "securityRules": [
                                {
                                    "name": "SSH",
                                    "priority": 100,
                                    "sourceAddressPrefix": "10.0.0.128/25"
                                },
                                {
                                    "name": "allow-ops-center-http",
                                    "protocol": "*",
                                    "sourcePortRange": "*",
                                    "destinationPortRange": "8888-65535",
                                    "sourceAddressPrefix": "*",
                                    "destinationAddressPrefix": "*",
                                    "access": "Allow",
                                    "priority": 110,
                                    "direction": "Inbound"
                                },
                                {
                                    "name": "Cassandra",
                                    "priority": 120
                                },
                                {
                                    "name": "Cassandra-JMX",
                                    "priority": 130
                                }
                            ]
                        },
                        {
                            "name": "ra-ntier-mgmt-ops-nsg",
                            "networkInterfaces": [
                                {
                                    "name": "ops-vm1-nic1"
                                }
                            ],
                            "securityRules": [
                                {
                                    "name": "SSH",
                                    "priority": 100,
                                    "sourceAddressPrefix": "10.0.0.128/25"
                                },
                                {
                                    "name": "allow-http",
                                    "protocol": "*",
                                    "sourcePortRange": "*",
                                    "destinationPortRange": 8888,
                                    "sourceAddressPrefix": "*",
                                    "destinationAddressPrefix": "*",
                                    "access": "Allow",
                                    "priority": 110,
                                    "direction": "Inbound"
                                }
                            ]
                        }
                    ]
                },
                {
                    "type": "Template",
                    "settings": {
                      "template": {
                        "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
                        "contentVersion": "1.0.0.0",
                        "parameters": {},
                        "variables": {
                          "vnetName": "ra-ntier-vnet",
                          "bastionName": "ra-bastion",
                          "bastionNsgName": "ra-bastion-nsg",
                          "bastionIpName": "ra-bastion-pip"
                        },
                        "resources": [                      
                          {
                            "type": "Microsoft.Network/networkSecurityGroups",
                            "apiVersion": "2019-09-01",
                            "name": "[variables('bastionNsgName')]",
                            "location": "[resourceGroup().location]",
                            "properties": {
                              "securityRules": [
                                {
                                  "name": "in_gateway_manager_any",
                                  "properties": {
                                    "protocol": "*",
                                    "sourcePortRange": "*",
                                    "destinationPortRange": "*",
                                    "sourceAddressPrefix": "GatewayManager",
                                    "destinationAddressPrefix": "*",
                                    "access": "Allow",
                                    "priority": 100,
                                    "direction": "Inbound",
                                    "sourcePortRanges": [],
                                    "destinationPortRanges": [],
                                    "sourceAddressPrefixes": [],
                                    "destinationAddressPrefixes": []
                                  }
                                },
                                {
                                  "name": "in_azure_cloud_any",
                                  "properties": {
                                    "protocol": "*",
                                    "sourcePortRange": "*",
                                    "destinationPortRange": "*",
                                    "sourceAddressPrefix": "AzureCloud",
                                    "destinationAddressPrefix": "*",
                                    "access": "Allow",
                                    "priority": 110,
                                    "direction": "Inbound",
                                    "sourcePortRanges": [],
                                    "destinationPortRanges": [],
                                    "sourceAddressPrefixes": [],
                                    "destinationAddressPrefixes": []
                                  }
                                },
                                {
                                  "name": "in_any_https",
                                  "properties": {
                                    "protocol": "TCP",
                                    "sourcePortRange": "*",
                                    "destinationPortRange": "443",
                                    "sourceAddressPrefix": "*",
                                    "destinationAddressPrefix": "*",
                                    "access": "Allow",
                                    "priority": 120,
                                    "direction": "Inbound",
                                    "sourcePortRanges": [],
                                    "destinationPortRanges": [],
                                    "sourceAddressPrefixes": [],
                                    "destinationAddressPrefixes": []
                                  }
                                },
                                {
                                  "name": "out_azure_cloud_https",
                                  "properties": {
                                    "protocol": "*",
                                    "sourcePortRange": "*",
                                    "destinationPortRange": "443",
                                    "sourceAddressPrefix": "*",
                                    "destinationAddressPrefix": "AzureCloud",
                                    "access": "Allow",
                                    "priority": 100,
                                    "direction": "Outbound",
                                    "sourcePortRanges": [],
                                    "destinationPortRanges": [],
                                    "sourceAddressPrefixes": [],
                                    "destinationAddressPrefixes": []
                                  }
                                },
                                {
                                  "name": "out_virtualnetwork_rdp",
                                  "properties": {
                                    "protocol": "*",
                                    "sourcePortRange": "*",
                                    "destinationPortRange": "3389",
                                    "sourceAddressPrefix": "*",
                                    "destinationAddressPrefix": "VirtualNetwork",
                                    "access": "Allow",
                                    "priority": 110,
                                    "direction": "Outbound",
                                    "sourcePortRanges": [],
                                    "destinationPortRanges": [],
                                    "sourceAddressPrefixes": [],
                                    "destinationAddressPrefixes": []
                                  }
                                },
                                {
                                  "name": "out_virtualnetwork_ssh",
                                  "properties": {
                                    "protocol": "*",
                                    "sourcePortRange": "*",
                                    "destinationPortRange": "22",
                                    "sourceAddressPrefix": "*",
                                    "destinationAddressPrefix": "VirtualNetwork",
                                    "access": "Allow",
                                    "priority": 120,
                                    "direction": "Outbound",
                                    "sourcePortRanges": [],
                                    "destinationPortRanges": [],
                                    "sourceAddressPrefixes": [],
                                    "destinationAddressPrefixes": []
                                  }
                                }
                              ]
                            }
                          },
                          {
                            "type": "Microsoft.Network/virtualNetworks/subnets",
                            "apiVersion": "2019-09-01",
                            "name": "[concat(variables('vnetName'), '/', 'AzureBastionSubnet')]",
                            "dependsOn": [
                              "[resourceId('Microsoft.Network/networkSecurityGroups', variables('bastionNsgName'))]"
                            ],
                            "properties": {
                              "addressPrefix": "10.0.254.0/27",
                              "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('bastionNsgName'))]"
                              },
                              "serviceEndpoints": [],
                              "delegations": [],
                              "privateEndpointNetworkPolicies": "Enabled",
                              "privateLinkServiceNetworkPolicies": "Enabled"
                            }
                          },
                          {
                            "type": "Microsoft.Network/publicIPAddresses",
                            "apiVersion": "2019-09-01",
                            "name": "[variables('bastionIpName')]",
                            "location": "[resourceGroup().location]",
                            "sku": {
                              "name": "Standard"
                            },
                            "properties": {
                              "publicIPAddressVersion": "IPv4",
                              "publicIPAllocationMethod": "Static",
                              "idleTimeoutInMinutes": 4,
                              "ipTags": []
                            }
                          },
                          {
                            "type": "Microsoft.Network/bastionHosts",
                            "apiVersion": "2019-09-01",
                            "name": "[variables('bastionName')]",
                            "location": "[resourceGroup().location]",
                            "dependsOn": [
                              "[resourceId('Microsoft.Network/publicIPAddresses', variables('bastionIpName'))]",
                              "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), 'AzureBastionSubnet')]"
                            ],
                            "properties": {
                              "ipConfigurations": [
                                {
                                  "name": "IpConf",
                                  "properties": {
                                    "privateIPAllocationMethod": "Dynamic",
                                    "publicIPAddress": {
                                      "id": "[resourceId('Microsoft.Network/publicIPAddresses',  variables('bastionIpName'))]"
                                    },
                                    "subnet": {
                                      "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), 'AzureBastionSubnet')]"
                                    }
                                  }
                                }
                              ]
                            }
                          }
                        ]
                      }
                    }
                  }
            ]
        }
    }
}
